--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.1",
+    "helmet": "^3.21.2",
     "migration": "^0.3.0",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
