--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.10.1",
     "helmet": "^3.21.2",
     "migration": "^0.3.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
