--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.0",
     "@auth0/angular-jwt": "^3.0.1",
     "ngx-image-cropper": "^2.0.2",
+    "ngx-infinite-scroller": "^0.5.0",
     "rxjs": "~6.4.0",
     "toastr": "^2.1.4",
     "tslib": "^1.10.0",
