--- a/server/package.json
+++ b/server/package.json
@@ -53,8 +53,9 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
+    "@nestjs/testing": "^6.10.8",
     "@types/express": "4.16.1",
+    "@types/hapi__joi": "^15.0.4",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
@@ -66,8 +67,7 @@
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "3.4.3",
-    "@types/hapi__joi": "^15.0.4"
+    "typescript": "3.4.3"
   },
   "jest": {
     "moduleFileExtensions": [
